very weird calendar and numberpicker

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,17 +14,20 @@ description: Diary for physics lessons in KPI
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   provider: ^3.2.0
   font_awesome_flutter: ^8.5.0
+  numberpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -36,7 +39,12 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  assets:
+    - assets/
+  fonts:
+    - family: MyFlutterApp
+      fonts:
+        - asset: fonts/MyFlutterApp.ttf
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
