--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,13 @@ dependencies:
 
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  sqflite: ^1.1.7+3
+  path_provider: any
   cupertino_icons: ^0.1.2
   provider: ^3.2.0
   font_awesome_flutter: ^8.5.0
   numberpicker: ^1.1.0
+  flutter_date_pickers: 0.0.6
 
 dev_dependencies:
   flutter_test:
