--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  shared_preferences: ^0.5.6
   http: ^0.12.0+2
   sqflite: ^1.1.7+3
   path_provider: any
